tests/ui/expected-or.stderr
error: expected `||`
 --> tests/ui/expected-or.rs:3:12
  |
3 | #[efg(unix |= windows)]
  |            ^^
